--- a/registration.html
+++ b/registration.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -43,7 +42,7 @@ mysql_query($qsql);
 
 mkdir("xplmemb/".$xpalpha);
 chmod("xplmemb/".$xpalpha, 0777);
-copy("chintu89.html","xplmemb/$xpalpha/$xpalpha.html");
+copy("user.html","xplmemb/$xpalpha/$xpalpha.html");
 #rename('xplmemb/chintu89.html',$xpalpha.'.html');
 copy("displaynonsense.php","xplmemb/$xpalpha/displaynonsense.php");
 copy("judgement.php","xplmemb/$xpalpha/judgement.php");
