small changes in css

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ $(element).parents('.control-group').removeClass('error');
 <div class="alert alert-error" >  
                     <p style="padding-left: 200px; font-size:25px;">XPLORERS</p>
                     </div>
-<div class="span3 offset10">
+ <div class="span3 offset10" style="margin-top: 50px;">
 <div class="alert alert-info" style="width: 250px;"> 
-      <form method="POST" action="/login.php"  id="login" >
+     <form id="login" action="/login.php" method="POST" novalidate="novalidate" style="border-top-width: 0px; margin-top: 30px;">
 		  <p style="font-size:20px;"><strong>Sign in</strong></p>
 		  <hr width=80%>
 <div class="control-group">		  
