--- a/user.html
+++ b/user.html
@@ -26,15 +26,15 @@ if (!isset($_SESSION['xplo1'])) {
 
 <head>
 <title>Xplorers</title>
-<h1 style="color:red;"><?php
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" src="http://jzaefferer.github.com/jquery-validation/jquery.validate.js"></script>
+<link href="css/bootstrap.css" rel="stylesheet"> 
+<h1 ><?php
     if ($checkname == $_SESSION['xplo1']) {
-        echo ("WELCOME " . $head);
         require("spcheck.php");
-    } else {
-        echo ($checkname);
-    }
+    } 
+    
 ?></h1>
-<link href="lu.css" rel="stylesheet" type="text/css">
 <script type="text/javascript">
 function des(a,b)
 {
@@ -49,29 +49,35 @@ window.location="/ercom.php?no="+a+"&con="+b+"&user="+c;
 
 </head>
 <body>
-<div style="padding-top:1px; postion:relative">
-<a href="home.php" style="text-decoration: none; color: #900; font-size: 15px; font-weight: bold;">Home</a>
-<a href="http://www.xplorers.host56.com/xplmemb/xplorercomments/xplorercomments.html?user=xplorercomments" style="text-decoration: none; color: #900; 
-font-size: 15px; font-weight: bold;">&nbsp;TimepassBoard</a>
-<a href="http://www.xplorers.host56.com/picassa/xploreralbum.html" style="text-decoration: none; color: #900; font-size: 15px; font-weight: bold;">&nbsp;Album</a> 
+<div class="navbar" >
+	 <div class="navbar-inner" style="position:fixed;width:100%;z-index:1; top:0px;"> 
+	 <div class="container">
+		<a class="brand" href="#">Xplorers</a> 
+		 <div class="nav-collapse"> 
+		 <ul class="nav"> 
+		 <li class="active">
+		<li><a href="#">Home</a></li>
+		<li><a href="#">Logout</a></li>
+		<li><a href="http://www.xplorers.host56.com/xplmemb/xplorercomments/xplorercomments.html?user=xplorercomments">TimepassBoard</a></li>
+		</div> 
+	</div>
+	</div>
+</div>
 
-<a href="logout.php" style="text-decoration: none; color: #900; font-size: 15px; font-weight: bold;">&nbsp;Logout</a> 
-</div>
-<div style="postion:relative;border:1px;">
-<br/><img  style="padding-top:1px;padding-bottom:2px;position:relative;left:0%;" src="http://www.xplorers.host56.com/<?php
+
+<div class="thumbnail" style="width: 130px; height: 140px; margin-top: 60px; margin-left: 20px;">
+<br/><img  src="http://www.xplorers.host56.com/<?php
     echo ($y);
-?>"/> 
-</div>
-<div style="position:relative; padding-top:1px">
+?>" /> 
 <?php
     if (($_GET['user']) == ($_SESSION['xplo1'])) {
         echo ('<a style="text-decoration: none;" href="uploadpic.php">click here to upload or change pic</a>');
     }
 ?>
 </div>
-<h2 style="width:10%;position:relative;top:1px;left:0%;color: #0066CC;font-size:25px">Friends</h2>
-<div style="width:150px;height: 300px; overflow:auto;">
-<table border="0"><tr><td>
+<h2 >Friends</h2>
+<div class="thumbnail" style="max-width: 150px; overflow: auto; height: 300px; border-left-width: 0px; margin-left: 22px; border-top-width: 0px; border-bottom-width: 0px;padding: 0px;">
+<ul class="nav nav-tabs nav-stacked" style="margin-bottom: 0px;">
 <?php
     require('dbconnect.php');
     $a   = 16;
@@ -79,44 +85,48 @@ font-size: 15px; font-weight: bold;">&nbsp;TimepassBoard</a>
     $dis->execute();
     $dis->bind_result($nameid, $namedis, $hreflink, $time, $ses);
     while ($dis->fetch()) {
-        if (($ses == "online") && (time() < (strtotime($time)) + 900)) {
+        /*if (($ses == "online") && (time() < (strtotime($time)) + 900)) {
             $stats = '<img src="onl.jpg"/>';
         } else {
             $stats = "";
-        }
+        }*/
 ?>
-<a  style="font-size:17px;" id="mem" href="http://www.xplorers.host56.com/<?php
+
+<li>
+<a   href="http://www.xplorers.host56.com/<?php
         echo ($hreflink);
 ?>">
 <?php
         echo ($namedis . " ");
-        echo ($stats);
-        echo ('</br>');
+        ?>
+        </a>
+        </li>
+        <?php 
     }
     $conn->close();
 }
 ?>
-</a></td></tr></table>
+</ul>
 </div>
 
 <table border="0" style="position:relative; left:390px; top:-480px;"width=50% >
 <tr>
 <td>
-<div style="position:relative;left:0;"> 
-<form method="post" action="insertnonsense.php">
-<textarea rows ="8" cols="40" name="textinpu"></textarea>
-<input type="submit" name="submit" value="post"/> 
+
+<form class="well" method="post" action="insertcomments.php" style="width: 350px;">
+<label><textarea class="span3" name="textinpu" placeholder="Type something"></textarea></label>
+<input type="submit" class="btn btn-primary "  name="submit" value="post"/> 
 <input type="hidden" value="<?php
 echo ($checkname);
 ?>" name="id"/>  
 </form>
-</div>
 
 <?php
-require('displaynonsense.php');
+require('displaycomments.php');
 ?>
 </td>
 </tr>
 </table>
 </body>
 </html>
+
